# rust-nation-uk-2024

./: .gitignore
crates/thursday-PyO3/: Cargo.toml  pyproject.toml  re_rs.ipynb
crates/thursday-PyO3/src/: lib.rs
crates/tuesday-async-workshop/: README.md
crates/tuesday-async-workshop/blog_client/: README.md
crates/tuesday-async-workshop/blog_client/src/: main.rs
crates/tuesday-async-workshop/blog_server/: README.md
crates/tuesday-async-workshop/blog_server/src/: main.rs
