[package]
name = "re-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "re_rs"
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.81"
pyo3 = {version = "0.21.0", features = ["anyhow", "experimental-declarative-modules"] }
regex = "1.10.4"
